--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
         uses: actions/checkout@v2
 
       - uses: actions/cache@v2
-        id: yarn-and-build-cache
+        id: npm-and-build-cache
         with:
           path: |
             ~/.cache/Cypress
             build
             node_modules
-          key: ${{ runner.os }}-node_modules-build-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-node_modules-build-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node_modules-build-
 
@@ -49,19 +49,19 @@ jobs:
       fail-fast: false
       matrix:
         # run copies of the current job in parallel
-        containers: [1, 2, 3, 4, 5]
+        containers: [1, 2]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
       - uses: actions/cache@v2
-        id: yarn-and-build-cache
+        id: npm-and-build-cache
         with:
           path: |
             ~/.cache/Cypress
             build
             node_modules
-          key: ${{ runner.os }}-node_modules-build-${{ hashFiles('**/yarn.lock') }}
+          key: ${{ runner.os }}-node_modules-build-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node_modules-build-
 
@@ -77,7 +77,7 @@ jobs:
           record: true
           parallel: true
           group: "UI - Chrome"
-          spec: cypress/tests/ui/*
+          spec: cypress/integration/*
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
           # Recommended: pass the GitHub token lets this action correctly
