--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -70,7 +70,7 @@ jobs:
         with:
           # we have already installed all dependencies above
           install: false
-          start: npm run e2e:record:chrome -- --parallel
+          start: npm run e2e:record:chrome
           wait-on: "http://localhost:3000"
           wait-on-timeout: 120
           browser: chrome
