--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "cypress:chrome": "cypress run --browser chrome",
         "cypress:info": "cypress info",
         "cypress:open": "cypress open",
-        "cypress:record:chrome": "cypress run --record --key f17a4bff-76c3-4852-ad3d-a6410788b2d0 --browser chrome",
+        "cypress:record:chrome": "cypress run --record --key f17a4bff-76c3-4852-ad3d-a6410788b2d0 --browser chrome --parallel",
         "cypress:record": "cypress run --record --key f17a4bff-76c3-4852-ad3d-a6410788b2d0",
         "cypress:run:record": "cypress run --record --key f17a4bff-76c3-4852-ad3d-a6410788b2d0",
         "cypress:run": "cypress run",
